# Hands-On-AI-Engineering

./: README.md
OCR/glm_ocr_pro/: README.md  app.py  ocr_local.py  requirements.txt  style.css  utils.py
OCR/image_to_structured_data/: .env.example  README.md  app.py  processor.py  schemas.py
OCR/latex_formula_ocr/: README.md
OCR/medical_prescription_digitizer/: .env.example  README.md  app.py
ai_agents/ai_travel_planning_agent/: .env.example  README.md  agents.py  app.py
ai_agents/cal_scheduling_agent/: .env.example  README.md  app.py
ai_agents/competitive_intelligence_agent/: .env.example  README.md  agents_logic.py  main.py  pyproject.toml
ai_agents/llm_agri_bot/: .env.example  README.md  agent.py  app.py  requirements.txt  tools.py
ai_agents/multi_agent_research_assistant_ag2/: .env.example  README.md  requirements.txt  research_assistant.py
ai_agents/smolagents_code_agent/: README.md  app.py  tools.py
ai_agents/startup_analyst/: README.md  agent.py  app.py  pyproject.toml
ai_agents/stock_portfolio_analyst/: .env.example  README.md  app.py
audio/music_explorer/: .env.example  README.md  app.py
multimodal/image_question_answering/: .env.example  README.md  app.py
multimodal/multimodal_rag/: .env.example  README.md
multimodal/multimodal_weather_app/: .env.example  README.md  app.py
rag_apps/graphrag_knowledge_system/: .env.example  README.md  app.py
rag_apps/hyde_rag/: .env.example  README.md  app.py  embedder.py  pyproject.toml  rag.py
rag_apps/rag_agent_with_database_routing/: README.md
(+11 files in other folders)
